--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,14 @@
     "psr-4": {
       "App\\Controller\\": "app/controller",
       "App\\Model\\": "app/model",
-      "App\\": "app"
+      "App\\": "app",
+      "DataBase\\": "DataBase"
     }
   },
   "require": {
     "symfony/http-foundation": "^5.0",
     "twig/twig": "^3.0",
-    "symfony/routing": "^5.0"
+    "symfony/routing": "^5.0",
+    "ext-pdo": "*"
   }
 }
