--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "symfony/http-foundation": "^5.0",
     "twig/twig": "^3.0",
     "symfony/routing": "^5.0",
-    "ext-pdo": "*"
+    "ext-pdo": "*",
+    "nesbot/carbon": "^2.28"
   }
 }
